PyMaker/datas/object2/RawHTML/i2301/Python_DOC_referPages.why-am-i-getting-a-syntax-error-in-python.txt
<div class="post-text" itemprop="text">
<div class="question-status question-originals-of-duplicate">
<p>This question already has an answer here:</p>
<ul>
<li>
<a dir="ltr" href="/questions/826948/syntax-error-on-print-with-python-3">Syntax error on print with Python 3 [duplicate]</a>
<span class="question-originals-answer-count">
                    9 answers
                </span>
</li>
</ul>
</div>
<p>I'm a beginner of Python and I got a problem here. I just copied what my textbook says but I got an error here.  I put the following code.</p>
<pre><code>if return_age != 0:
    print"Your age is %s years" %(return_age)
</code></pre>
<p>Then my laptop says</p>
<pre><code>File "&lt;ipython-input-3-8c2f6bc68809&gt;", line 15
 print"Your age is %s years" %(return_age)
                              ^
SyntaxError: invalid syntax
</code></pre>
<p>Please explain how to correct this bug.  Thanks in advance.</p>
</div>
<div class="post-text" itemprop="text">
<pre><code># works in python 2
return_age = 4
if return_age != 0:
    print "Your age is %s years" %(return_age)

# works in python 3 
return_age = 4
if return_age != 0:
    print("Your age is %s years" %(return_age))
</code></pre>
<p><a href="https://docs.python.org/2/reference/simple_stmts.html#the-print-statement" rel="nofollow noreferrer">https://docs.python.org/2/reference/simple_stmts.html#the-print-statement</a></p>
<p><a href="https://docs.python.org/3/library/functions.html#print" rel="nofollow noreferrer">https://docs.python.org/3/library/functions.html#print</a></p>
</div>
<div class="post-text" itemprop="text">
<p>Print is a function in Python 3, so you need parentheses.</p>
</div>
<div class="post-text" itemprop="text">
<p>If you're using python 3.x
Try this</p>
<pre><code>print("Your age is %s years" %(return_age))
</code></pre>
</div>
<div class="post-text" itemprop="text">
<pre><code> print"Your age is %s years" %(return_age)
</code></pre>
<p>You are using <code>Python 3.x</code> version and using a <code>Python 2.x</code> code. </p>
<p>If you want to use <code>Python 2.x</code> then this code will work.</p>
<p>Or else use the following code:</p>
<pre><code>print("Your age is %s years" %(return_age))
</code></pre>
</div>
<span class="comment-copy">Are you using Python 3?</span>
<span class="comment-copy">Thanks, I copied what you wrote and it worked!</span>
<span class="comment-copy">@MakotoNakai Glad I could help.</span>
<span class="comment-copy">Thanks, I added parentheses and now my error is corrected!</span>
